# FinopsEnv

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
finopsenv/: __init__.py  client.py  env.py
finopsenv/graders/: __init__.py
finopsenv/schemas/: __init__.py  action.py  observation.py
finopsenv/simulation/: __init__.py  cluster.py  constants.py
server/: app.py
