[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finopsenv"
version = "1.0.0"
description = "FinOpsEnv multi-cloud orchestration environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "websockets>=12.0",
    "requests>=2.31.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "openenv-core",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["finopsenv*", "server*"]
